--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,17 +8,71 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Float Team</title>
 </head>
+
 <body>
-    <header>
+    <header class="main-header">
         <h1>Meet Our Team</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia corporis, rem ipsam accusamus provident ut? Voluptas exercitationem accusantium eaque iure.</p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia corporis, rem ipsam accusamus provident ut?
+            Voluptas exercitationem accusantium eaque iure.
+        </p>
     </header>
-    <section>
-        <div>
-            <div>
-                
+    <section class="main-card">
+        <div class="container">
+            <div class="raw clearfix">
+                <div class="col">
+                    <div class="card clearfix">
+                        <img class="card-img" src="https://picsum.photos/200/200" alt="Immagine di prova">
+                        <h2 class="card-title">MARCO BIANCHI</h2>
+                        <p class="card-role">Designer</p>
+                        <p class="card-contact">marcobianchi@team.com</p>
+                    </div>
+                </div>
+                <div class="col clearfix">
+                    <div class="card clearfix">
+                        <img class="card-img" src="https://picsum.photos/200/200" alt="Immagine di prova">
+                        <h2 class="card-title">MARCO BIANCHI</h2>
+                        <p class="card-role">Designer</p>
+                        <p class="card-contact">marcobianchi@team.com</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card clearfix">
+                        <img class="card-img" src="https://picsum.photos/200/200" alt="Immagine di prova">
+                        <h2 class="card-title">MARCO BIANCHI</h2>
+                        <p class="card-role">Designer</p>
+                        <p class="card-contact">marcobianchi@team.com</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card clearfix">
+                        <img class="card-img" src="https://picsum.photos/200/200" alt="Immagine di prova">
+                        <h2 class="card-title">MARCO BIANCHI</h2>
+                        <p class="card-role">Designer</p>
+                        <p class="card-contact">marcobianchi@team.com</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card clearfix">
+                        <img class="card-img" src="https://picsum.photos/300/300" alt="Immagine di prova">
+                        <h2 class="card-title">MARCO BIANCHI</h2>
+                        <p class="card-role">Designer</p>
+                        <p class="card-contact">marcobianchi@team.com</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card clearfix">
+                        <img class="card-img" src="https://picsum.photos/200/200" alt="Immagine di prova">
+                        <h2 class="card-title">MARCO BIANCHI</h2>
+                        <p class="card-role">Designer</p>
+                        <p class="card-contact">marcobianchi@team.com</p>
+                    </div>
+                </div>
             </div>
         </div>
+        
     </section>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti, dolor.</p>
 </body>
+
 </html>
