--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <div class="card clearfix">
                         <img class="card-img" src="https://cdn.vox-cdn.com/thumbor/oagylj3SGPcZMBH5BOBoGg8HcR0=/1400x788/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/22323904/ian_mckellan_gandalf_4k_lotr.jpg" alt="Immagine di prova">
                         <h2 class="card-title">GANDALF</h2>
-                        <p class="card-role">Mago</p>
+                        <p class="card-role">stregone</p>
                         <a href="#" class="card-contact">youshallnotpass@bridge.lotr</a>
                     </div>
                 </div>
