--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card clearfix">
+                    <div class="card clearfix"">
                         <img class="card-img" src="https://cdn.vox-cdn.com/thumbor/oagylj3SGPcZMBH5BOBoGg8HcR0=/1400x788/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/22323904/ian_mckellan_gandalf_4k_lotr.jpg" alt="Immagine di prova">
                         <h2 class="card-title">GANDALF</h2>
-                        <p class="card-role">stregone</p>
+                        <p class="card-role">Stregone</p>
                         <a href="#" class="card-contact">youshallnotpass@bridge.lotr</a>
                     </div>
                 </div>
@@ -51,7 +51,7 @@
                     <div class="card clearfix">
                         <img class="card-img" src="https://www.mememaker.net/static/images/templates/1558240.jpg" alt="Immagine di prova">
                         <h2 class="card-title">BATMAN</h2>
-                        <p class="card-role">Dark Knight</p>
+                        <p class="card-role">The Dark Knight</p>
                         <a href="#" class="card-contact">imvengeance@punch.face</a>
                     </div>
                 </div>
